WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230955
Fix typo in RenderSVGBlock::updateFromStyle comment
https://bugs.webkit.org/show_bug.cgi?id=230955
Summary
Fix typo in RenderSVGBlock::updateFromStyle comment
Olivier Blin
Reported
2021-09-29 08:33:32 PDT
refactor instead of reactor
Attachments
Patch
(1.63 KB, patch)
2021-09-29 08:41 PDT
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2021-09-29 08:41:20 PDT
Created
attachment 439608
[details]
Patch
EWS
Comment 2
2021-09-29 09:37:14 PDT
Committed
r283228
(
242270@main
): <
https://commits.webkit.org/242270@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439608
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-09-29 09:38:33 PDT
<
rdar://problem/83674944
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug