Fix typo in RenderSVGBlock::updateFromStyle comment https://bugs.webkit.org/show_bug.cgi?id=230955

Patch by Olivier Blin <olivier.blin@softathome.com> on 2021-09-29
Reviewed by Simon Fraser.

No new tests, just a comment fix.

* rendering/svg/RenderSVGBlock.cpp:
(WebCore::RenderSVGBlock::updateFromStyle): refactor instead of reactor.

Canonical link: https://commits.webkit.org/242270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283228 268f45cc-cd09-0410-ab3c-d52691b4dbfc